--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
-sudo: false
-
 language: python
-
 python:
-  - 3.5
-  - 3.7
-  - 2.7
-
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  # PyPy versions
+  - "pypy3.5"
+# command to install dependencies
 install:
-  - pip install codecov
-
-script:
-  - coverage run tests.py
-
-after_success:
-  - codecov
+  - pip install -r requirements.txt
+  - pip install .
+# command to run tests
+script: pytest
